# ternary-scheduler

./: AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: MIGRATION.md
memory/: JOURNAL.md
src/: lib.rs  main.rs
tests/: readme_quickstart.rs
